Round long answers to avoid display overflow
Create a roundResult function to  round answers with long decimals
so that they don’t overflow the display.
Also, limit the length of entered numbers.

Hide the rest of the result if it is too long.

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
     text-align: right;
     font-weight: bold;
     font-size: 30px;
+    max-width: 290px;
+    overflow: hidden;
 }
 
 button {
